tests/files/flow_controller_tests/should_run/082.cmdr
x = 3.3;
print cosh(x);