tests/files/flow_controller_tests/should_fail/063.cmdr
x = false;
print cosh(x);